--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -26,5 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
-  }
+  },
+  "homepage": "https://gabrielfogaca.github.io/gabrielffogaca"
 }
