--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -30,5 +31,17 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
-  "homepage": "https://gabrielfogaca.github.io/gabrielffogaca"
+  "homepage": "https://gabrielfogaca.github.io/gabrielffogaca",
+  "public": {
+    "imgs": {
+      "url": "/imgs/url.ico"
+    }
+  },
+  "link": {
+    "rel": "icon",
+    "href": "%PUBLIC_URL%/imgs/url.ico"
+  },
+  "imports": {
+    "./App": "./src/App"
+  }
 }
